--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     background: #f7f7f7;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .photo {
@@ -8,6 +9,16 @@ body {
 }
 
 #title, .subtitle, .post_title {
+    color: #505050;
+}
+
+#title {
+    font-size: 40px;
+    text-transform: uppercase;
+}
+
+a {
+    text-decoration: line-through;
     color: #505050;
 }
 
@@ -29,6 +40,7 @@ body {
 .post_content {
     margin: 0;
     margin-bottom: 15px;
+    text-transform: capitalize;
 }
 
 .post_image {
